@@ -6,6 +6,13 @@ Version 11   Live Server Fixes
   multi-life tool dumping loophole.
 
 
+--Wife retains her half of the money (and accumulates her own salary) even
+  after a robbery that reaches the vault.  Previously, after a vault robbery,
+  half of the money she held would be put in the vault.  This changes prevents
+  someone from whittling away at house's money by reaching the vault over and
+  over without finding the wife.
+
+
 
 
 
